# educational-consultations-bot

./: .gitignore  Dockerfile  Makefile  README.org  __main__.py  entrypoint.sh  init_models.py  pyproject.toml
handlers/: __init__.py  callback_query.py  command.py  message.py
models/: __init__.py  category.py  data.py
models/pickle/: backend_subcategory_model.pkl
utils/: telegram.py
